otus-app-dz5/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
  labels:
    app: users-api
spec:
  selector:
    app: users-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: metrics
      port: 9090
      targetPort: 9090
  type: ClusterIP
