otus-app-dz5/k8s/postgres-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  labels:
    app: postgres-exporter
spec:
  ports:
  - port: 9187
    targetPort: metrics
    name: metrics
  selector:
    app: postgres-exporter
